--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webserv</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <h1><strong>Website's index page<strong></h1>
@@ -13,6 +13,6 @@
         <p>This is a default website's index page, no purpose but test</p>
     </div>
     <img src="media/42logo.png" alt="Logo 42" class="logo-img">
-    <a href="articles/webserv.html">Article sur Webserv</a>
+    <a href="content/webserv.html">Article sur Webserv</a>
 </body>
 </html>
