--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,6 @@
         <p>This is a default website's index page, no purpose but test</p>
     </div>
     <img src="media/42logo.png" alt="Logo 42" class="logo-img">
-    <a href="content/webserv.html">Article sur Webserv</a>
+    <a href="content/CGI.html">CGI page</a>
 </body>
 </html>
