File redirect, multi-type file handling, muti-client handling, CGI file location/execution/return handling
Left to do:
- manage to get data from POST request
- manage to send data from POST request to CGI process
- make it clearer

--- a/website/content/CGI.html
+++ b/website/content/CGI.html
@@ -8,7 +8,7 @@
 <body>
     <body>
         <h2>Submit Form to CGI Script</h2>
-        <form action="/cgi-bin/echo_request.cgi" method="post">
+        <form action="../echo_request.cgi" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br><br>
             <label for="email">Email:</label>
